Filter user VM options
Change-Id: I97478b98fbb3bd701bbae7dbae5c69bc7f542f4f
Issue: 168557697